@@ -95,6 +95,11 @@ case "${target}" in
 	config_path="mingw32 posix"
 	;;
 
+  *-*-solaris2.[56]*)
+	config_path="posix95 posix"
+	XLDFLAGS="${XLDFLAGS} -lposix4"
+	;;
+
   *)
 	;;
 
